fix uneven tile sizing (finally)

--- a/client/style.css
+++ b/client/style.css
@@ -579,6 +579,7 @@ img {
     flex-wrap: nowrap;
     align-items: stretch;
     flex-grow: 1;
+    flex-basis: 0px;
 }
 .tileGroupSelf {
     position: relative;
@@ -605,19 +606,27 @@ img {
 
 .tile {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
     flex-grow: 1;
-    padding: 8px 8px;
-    border: 2px solid white;
+    flex-basis: 0px;
     box-sizing: border-box;
+    min-width: 0px;
+    min-height: 0px;
 }
 .treeModeDisplay .tile {
     width: 200px;
     height: 200px;
     border: 4px solid white;
     margin: -2px -2px;
+}
+
+.tileContents {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 8px 8px;
+    border: 2px solid white;
 }
 
 .tileDrag {
@@ -844,6 +853,9 @@ img {
     flex-wrap: nowrap;
     align-items: stretch;
     flex-grow: 1;
+    flex-basis: 0px;
+    min-width: 0px;
+    min-height: 0px;
 }
 .pGroupTileVertical {
     flex-direction: column;
@@ -852,6 +864,9 @@ img {
     display: flex;
     position: relative;
     flex-grow: 1;
+    flex-basis: 0px;
+    min-width: 0px;
+    min-height: 0px;
     border: 2px solid white;
     box-sizing: border-box;
 }
